--- a/jsonl_viewer/templates/jsonl_viewer/base.html
+++ b/jsonl_viewer/templates/jsonl_viewer/base.html
@@ -12,6 +12,8 @@
     <!-- Chart.js CSS (optional if any specific styles needed) -->
     {% block extra_head %}
     <!-- jQuery UI CSS (if needed globally) -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <link href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     {% endblock %}
@@ -23,17 +25,40 @@
                 <a href="{% url 'index' %}">microbe.cards</a>
             </div>
             <ul class="nav-links">
-                <li><a href="{% url 'index' %}">Home</a></li>
+                <li><a href="{% url 'index' %}">Overview</a></li>
                 <li><a href="{% url 'browse_microbes' %}">Browse Microbes</a></li>
                 <li><a href="{% url 'model_ranking' %}">Model Rankings</a></li>
-                <li><a href="{% url 'about' %}">About</a></li>
+                <li>
+                    <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">About</a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li><a class="dropdown-item" href="{% url 'about' %}">About Us</a></li>
+                        <li><a class="dropdown-item" href="{% url 'request_microbe' %}">Request Microbe</a></li>
+                    </ul>
+                </li>
                 <li><a href="{% url 'imprint' %}">Imprint</a></li>
                 <li><a href="{% url 'dataprotection' %}">Privacy Policy</a></li>
-                <!-- GitHub Link Added Below -->
-                <li class="github-link">
-                    <a href="https://github.com/GenomeNet/microbe.cards" target="_blank" aria-label="GitHub">
-                        <i class="fab fa-github"></i>
-                    </a>
+            
+                <li>
+                    {% if user.is_authenticated %}
+                        <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">{{ user.username }}</a>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="{% url 'home' %}">Home</a></li>
+                            <li><a class="dropdown-item" href="{% url 'profile_settings' %}">Settings</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                        </ul>
+                    {% else %}
+                        <a href="#" class="dropdown-toggle" data-bs-toggle="dropdown">Account</a>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
+                            <li><a class="dropdown-item" href="{% url 'register' %}">Register</a></li>
+                        </ul>
+                    {% endif %}
+                    <li>
+                        <a href="https://github.com/GenomeNet/microbe.cards" target="_blank" aria-label="GitHub">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </li>
                 </li>
             </ul>
         </div>
@@ -65,6 +90,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Bootstrap JS Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 
     {% block extra_scripts %}{% endblock %}
 </body>
